# EffectiveModernCpp_ysbaekFox

./: .gitignore  CMakeLists.txt  README.md
Chapter_1_DeducingTypes/: item_1.cpp
Chapter_1_DeducingTypes/Item_1/: case_1.cpp  case_2.cpp  case_3.cpp  case_4_array_arguments.cpp  case_5_function_arguments.cpp
Chapter_1_DeducingTypes/Item_2/: auto_deduction_rule.cpp
Chapter_1_DeducingTypes/Item_3/: decltype_deduction_rule.cpp
Chapter_1_DeducingTypes/Item_4/: how_to_view_deduced_types.cpp
Chapter_1_DeducingTypes/Item_5/: prefer_auto_explicit.cpp
Chapter_2_auto/Item_6/: use_explicitly_typed_initializer_idom.cpp
Chapter_3_Moving_to_Modern_Cpp/Item_10/: prefer_scoped_enums.cpp
Chapter_3_Moving_to_Modern_Cpp/Item_11/: prefer_deleted_functions.cpp
Chapter_3_Moving_to_Modern_Cpp/Item_12/: declare_override.cpp
Chapter_3_Moving_to_Modern_Cpp/Item_13/: prefer_const_iterator.cpp
Chapter_3_Moving_to_Modern_Cpp/Item_14/: noexcept.cpp
Chapter_3_Moving_to_Modern_Cpp/Item_15/: use_constexpr.cpp
Chapter_3_Moving_to_Modern_Cpp/Item_16/: const_method_thread_safe.cpp
Chapter_3_Moving_to_Modern_Cpp/Item_17/: special_member_function.cpp
Chapter_3_Moving_to_Modern_Cpp/Item_7/: Distinguish_brace_parenthese.cpp  most_vexing_parse.cpp
Chapter_3_Moving_to_Modern_Cpp/Item_8/: prefer_nullptr_to_0.cpp
Chapter_3_Moving_to_Modern_Cpp/Item_9/: prefer_alias_to_typedefs.cpp
Chapter_4_Smart_Pointers/Item_18/: empty_class_optimization.cpp  use_unique_ptr.cpp
Chapter_4_Smart_Pointers/Item_19/: use_shared_ptr.cpp
Chapter_4_Smart_Pointers/Item_20/: use_weak_ptr.cpp
Chapter_4_Smart_Pointers/Item_21/: prefer_make_than_new.cpp
Chapter_5_Ravlue_Move_and_Forwarding/Item_23/: std_move_forward.cpp
Common/: cpp_types.h  typechecker.h
