project(EffectiveModernCpp)

cmake_minimum_required(VERSION 3.0)

include_directories ( Common )

#set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_VERBOSE_MAKEFILE)

set(BOOST_ROOT "$ENV{THIRD_PARTY_LIB}/boost_1_72_0")
set(BOOST_INCLUDE_DIR ${BOOST_ROOT})
set(BOOST_LIBRARY_DIR ${BOOST_ROOT}/stage/lib)

include_directories(${BOOST_INCLUDE_DIR})
link_directories(${BOOST_LIBRARY_DIR})

#add_executable(exec "Chapter_1_DeducingTypes/Item_1/case_1.cpp")
#add_executable(exec "Chapter_1_DeducingTypes/Item_1/case_2.cpp")
#add_executable(exec "Chapter_1_DeducingTypes/Item_1/case_3.cpp")
#add_executable(exec "Chapter_1_DeducingTypes/Item_1/case_4_array_arguments.cpp")
#add_executable(exec "Chapter_1_DeducingTypes/Item_1/case_5_function_arguments.cpp")
#add_executable(exec "Chapter_1_DeducingTypes/Item_2/auto_deduction_rule.cpp")
#add_executable(exec "Chapter_1_DeducingTypes/Item_3/decltype_deduction_rule.cpp")
#add_executable(exec "Chapter_1_DeducingTypes/Item_4/how_to_view_deduced_types.cpp")
#add_executable(exec "Chapter_2_auto/Item_5/prefer_auto_explicit.cpp")
#add_executable(exec "Chapter_2_auto/Item_6/use_explicitly_typed_initializer_idom.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_7/Distinguish_brace_parenthese.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_7/most_vexing_parse.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_8/prefer_nullptr_to_0.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_9/prefer_alias_to_typedefs.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_10/prefer_scoped_enums.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_11/prefer_deleted_functions.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_12/declare_override.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_13/prefer_const_iterator.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_14/noexcept.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_15/use_constexpr.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_16/const_method_thread_safe.cpp")
#add_executable(exec "Chapter_3_Moving_to_Modern_Cpp/Item_17/special_member_function.cpp")
#add_executable(exec "Chapter_4_Smart_Pointers/")
add_executable(exec "Chapter_5_Ravlue_Move_and_Forwarding/Item_23/std_move_forward.cpp")

target_link_libraries(exec ${BOOST_LIBRARIES})